# x_make_progress_board_x

./: CHANGELOG.md  README.md  __init__.py  cli.py  controller.py  progress_board_widget.py  pyproject.toml  x_cls_make_progress_board_x.py
tests/: test_entry_module.py  test_progress_board.py
x_make_progress_board_x.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
